--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:structure": "node config/scripts/check-structure.mjs",
     "start": "next start apps/web",
     "build:test": "tsc --project config/tsconfig.test.json",
-    "test:audio": "pnpm build:test && node --test build/tests-dist/eval/src/tests/audio-validation.test.js",
+    "test:audio": "pnpm build:test && node --test build/tests-dist/eval/src/tests/*.test.js",
     "build:desktop": "pnpm build && node packages/shell/scripts/prepare-next.js && electron-builder --mac"
   },
   "dependencies": {
@@ -86,6 +86,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-unicorn": "^54.0.0",
+    "ffmpeg-static": "^5.3.0",
     "fs-extra": "^11.3.2",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
