v0 The Electron app is now at a baseline stability and was able to be built and opened.  Baseline app now works as node modules were carried over.

--- a/package.json
+++ b/package.json
@@ -108,7 +108,6 @@
     },
     "icon": "build/icon.icns",
     "asarUnpack": [
-      "build/web/**",
       "node_modules/@anthropic-ai/**",
       "node_modules/**/*.node"
     ],
@@ -131,15 +130,13 @@
     ],
     "extraResources": [
       {
-        "from": "build/web/standalone",
+        "from": "apps/web/.next/standalone",
         "to": "next"
-      },
-      {
-        "from": "build/web",
-        "to": "build/web",
-        "filter": ["**/*", "!standalone/**"]
       }
-    ]
+    ],
+    "extraMetadata": {
+      "comment": "Standalone Next.js server with all dependencies"
+    }
   },
   "packageManager": "pnpm@10.23.0+sha512.21c4e5698002ade97e4efe8b8b4a89a8de3c85a37919f957e7a0f30f38fbc5bbdd05980ffe29179b2fb6e6e691242e098d945d1601772cad0fef5fb6411e2a4b"
 }
